# RAG_PDF_APP

./: README.md  custom_types.py  data_loader.py  main.py  pyproject.toml  streamlit_app.py  vector_db.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/5e824601-d111-416e-88f2-245a624f0b97/payload_index/: IDENTITY  LOG  MANIFEST-000013
qdrant_storage/collections/docs/0/segments/710d32eb-a4b8-4b4f-acea-717d77dc3cc7/payload_index/: IDENTITY  LOG  MANIFEST-000013
qdrant_storage/collections/docs/0/segments/9ac51dca-25f0-4dbf-a26d-2ed72076d0bd/payload_index/: IDENTITY  LOG  MANIFEST-000013
qdrant_storage/collections/docs/0/segments/ab31c42c-dc39-4c06-9caa-1bf0db856971/payload_index/: IDENTITY  LOG  MANIFEST-000013
qdrant_storage/collections/docs_e5_768/0/: newest_clocks.json
qdrant_storage/collections/docs_e5_768/0/segments/5ab469bd-436b-4b33-a66b-cd13c4e5f833/: mutable_id_tracker.mappings
qdrant_storage/collections/docs_e5_768/0/segments/5ab469bd-436b-4b33-a66b-cd13c4e5f833/payload_index/: IDENTITY  LOG  MANIFEST-000013
qdrant_storage/collections/docs_e5_768/0/segments/74d3aac4-b7e0-4212-813e-7f2d9ee159b3/: mutable_id_tracker.mappings
qdrant_storage/collections/docs_e5_768/0/segments/c9f283bd-8db3-409e-b423-40f215e60c06/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/docs_e5_768/0/segments/f210fa3b-499d-4e2b-aa14-dca61e55b97f/: mutable_id_tracker.mappings  mutable_id_tracker.versions
(+9 files in other folders)
